--- a/src/app/shared/ui/post-card/post-card.html
+++ b/src/app/shared/ui/post-card/post-card.html
@@ -1,28 +1,37 @@
 @if (mode() === 'card') {
-<div class="card border-0 shadow-sm mb-4 h-100">
-    <div class="ratio ratio-16x9">
-        <img [src]="post().imageUrl" class="img-fluid rounded-top" [alt]="post().title">
-    </div>
-    <div class="card-body d-flex flex-column">
-        <h6 class="fw-semibold">{{ post().title }}</h6>
-        <p class="text-muted small flex-grow-1">{{ post().description }}</p>
-        <div class="mt-2">
-            <ng-container *ngTemplateOutlet="actionRef"></ng-container>
+<div class="app-post-card h-100 d-flex flex-column">
+  <div class="card-image-wrapper">
+    <img [src]="post().imageUrl" class="post-img" [alt]="post().title">
+    <div class="post-category-badge"># {{'Engineering' }}</div>
+  </div>
+
+  <div class="card-body-content d-flex flex-column p-3 flex-grow-1">
+    <h6 class="post-title mb-2">{{ post().title }}</h6>
+    <p class="post-description text-muted small flex-grow-1">{{ post().description }}</p>
+
+    <div class="card-footer-actions d-flex justify-content-between align-items-center w-100 mt-3 pt-3 border-top border-light-subtle">
+      <div class="author-info d-flex align-items-center">
+        <img src="https://i.pravatar.cc/150?u=niki" class="author-avatar rounded-circle me-2" alt="author">
+        <div class="d-flex flex-column">
+          <span class="author-name fw-bold text-dark">The Niki</span>
         </div>
+      </div>
+      <ng-container *ngTemplateOutlet="actionRef"></ng-container>
     </div>
+  </div>
 </div>
 } @else {
 <div class="d-flex justify-content-between align-items-start p-3  bg-white">
-    <div class="me-3 w-70">
-        <strong class="d-block">{{ post().title }}</strong>
-        <p class="small text-muted mb-0">{{ post().description }}</p>
-    </div>
-    <div class="d-flex gap-2 align-items-center w-30">
-        <ng-container *ngTemplateOutlet="actionRef"></ng-container>
-    </div>
+  <div class="me-3 w-70">
+    <strong class="d-block">{{ post().title }}</strong>
+    <p class="small text-muted mb-0">{{ post().description }}</p>
+  </div>
+  <div class="d-flex gap-2 align-items-center w-30">
+    <ng-container *ngTemplateOutlet="actionRef"></ng-container>
+  </div>
 </div>
 }
 
 <ng-template #actionRef>
-    <ng-content select="[actions]"></ng-content>
+  <ng-content select="[actions]"></ng-content>
 </ng-template>
