added editors to post list on user dashboard

--- a/src/app/features/posts/posts.html
+++ b/src/app/features/posts/posts.html
@@ -127,11 +127,26 @@
                       Updated 2h ago
                     </span>
                   </div>
+
+                  <div class="d-flex justify-content-end mt-2 pe-2 gap-2">
+                    <div class="avatar-group d-flex align-items-center">
+                      <span class="smallest text-muted fw-medium">+2 editors</span>
+                      <div class="co-author-circle shadow-sm ms-2" [title]="'Bill'">
+                        <img [src]="'https://www.gravatar.com/avatar/?d=mp&s=150'" [alt]="'Elise'" class="avatar-img">
+                              <!-- @else {
+                                <span class="avatar-initials">N</span>
+                              } -->
+                      </div>
+                    </div>
+                   
+                  </div>
+
+
                 </div>
               </app-post-card>
             </div>
           </div>
-          }
+        }
         </div>
       </div>
 
